# AI_agent_assignment1

./: .env  pyproject.toml
inventory_agent/: __init__.py  main.py
src/ai_agent_assignment1/hooks/: main.py
